markdown preview, new aliaes, wallpapers

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,6 +2,7 @@
 # Gruvbox Material Dark Hard
 include current-theme.conf
 # END_KITTY_THEME
+background_opacity 0.9
 
 # KITTY KEY MAPPINGS
 map alt+enter launch --type=window --cwd=current
