--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,13 @@
 # BEGIN_KITTY_THEME
-# Gruvbox Material Dark Hard
+# Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
-background_opacity 0.9
+# background_opacity 0.9
+tab_bar_min_tabs            1
+tab_bar_edge                bottom
+tab_bar_style               powerline
+tab_powerline_style         slanted
+tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
 
 # KITTY KEY MAPPINGS
 map alt+enter launch --type=window --cwd=current
