update kitty config and aliases
and some nvim tweaks here and there

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,12 +2,16 @@
 # Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
+
+x11_hide_window_decorations true
+window_padding_width 	    1
+
 # background_opacity 0.9
 tab_bar_min_tabs            1
 tab_bar_edge                bottom
-tab_bar_style               powerline
-tab_powerline_style         slanted
-tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
+tab_bar_style               separator
+tab_bar_background 	    none
+# tab_powerline_style         slanted
 
 # KITTY KEY MAPPINGS
 map alt+enter launch --type=window --cwd=current
