--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,10 +1,16 @@
 # vim:ft=kitty
 
-## name:     Catppuccin-Mocha - (custom modified)
+## name:     Catppuccin Kitty Mocha
+## author:   Catppuccin Org
+## license:  MIT
+## upstream: https://github.com/catppuccin/kitty/blob/main/mocha.conf
+## blurb:    Soothing pastel theme for the high-spirited!
+
+
 
 # The basic colors
 foreground              #CDD6F4
-background              #161620
+background              #1E1E2E
 selection_foreground    #1E1E2E
 selection_background    #F5E0DC
 
