--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,14 +4,19 @@ include current-theme.conf
 # END_KITTY_THEME
 
 x11_hide_window_decorations true
-window_padding_width 	    1
+
+remember_window_size	    false
+initial_window_width  	    800
+initial_window_height 	    400
+window_padding_width 	    2 1
 
 # background_opacity 0.9
 tab_bar_min_tabs            1
 tab_bar_edge                bottom
 tab_bar_style               separator
 tab_bar_background 	    none
-# tab_powerline_style         slanted
+tab_separator		    " "
+tab_title_template 	    " {fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title} "
 
 # KITTY KEY MAPPINGS
 map alt+enter launch --type=window --cwd=current
