--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,14 +4,14 @@ include current-theme.conf
 # END_KITTY_THEME
 
 x11_hide_window_decorations true
-
 remember_window_size	    false
-initial_window_width  	    800
-initial_window_height 	    400
-window_padding_width 	    2 1
+initial_window_width  	    1500
+initial_window_height 	    800
+window_padding_width 	    1
+active_border_color 	    #00ff00
 
 # background_opacity 0.9
-tab_bar_min_tabs            1
+tab_bar_min_tabs            2
 tab_bar_edge                bottom
 tab_bar_style               separator
 tab_bar_background 	    none
@@ -21,3 +21,7 @@ tab_title_template 	    " {fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}
 # KITTY KEY MAPPINGS
 map alt+enter launch --type=window --cwd=current
 map ctrl+shift+t new_tab_with_cwd
+map ctrl+f2 detach_window new-tab
+map ctrl+f3 detach_window
+map f9 close_other_windows_in_tab
+map ctrl+shift+f toggle_layout stack
