--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,20 +3,25 @@
 include current-theme.conf
 # END_KITTY_THEME
 
-x11_hide_window_decorations true
-remember_window_size	    false
-initial_window_width  	    1500
-initial_window_height 	    800
-window_padding_width 	    1
-active_border_color 	    #00ff00
+x11_hide_window_decorations	true
+remember_window_size	false
+initial_window_width	1500
+initial_window_height	800
+window_padding_width	1
+active_border_color	#00ff00
+
+font_family	SauceCodePro Nerd Font
+bold_font	SauceCodePro Nerd Font Medium
+italic_font	SauceCodePro Nerd Font Italic
+bold_italic_font	SauceCodePro Nerd Font Medium Italic
 
 # background_opacity 0.9
-tab_bar_min_tabs            2
-tab_bar_edge                bottom
-tab_bar_style               separator
-tab_bar_background 	    none
-tab_separator		    " "
-tab_title_template 	    " {fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title} "
+tab_bar_min_tabs	2
+tab_bar_edge	bottom
+tab_bar_style	separator
+tab_bar_background	none
+tab_separator	" "
+tab_title_template	" {fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title} "
 
 # KITTY KEY MAPPINGS
 map alt+enter launch --type=window --cwd=current
