--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -19,7 +19,7 @@ bold_italic_font	SauceCodePro Nerd Font Medium Italic
 tab_bar_min_tabs	2
 tab_bar_edge	bottom
 tab_bar_style	separator
-# tab_bar_background	none
+tab_bar_background	none
 tab_separator	" "
 tab_title_template	" {fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title} "
 
