--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -25,8 +25,8 @@ tab_title_template	" {fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{titl
 
 # KITTY KEY MAPPINGS
 map alt+enter launch --type=window --cwd=current
-map ctrl+shift+t new_tab_with_cwd
-map ctrl+f2 detach_window new-tab
-map ctrl+f3 detach_window
-map f9 close_other_windows_in_tab
-map ctrl+shift+f toggle_layout stack
+map alt+t new_tab_with_cwd
+map alt+f2 detach_window new-tab
+map alt+f3 detach_window
+map alt+f9 close_other_windows_in_tab
+map alt+f toggle_layout stack
