--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -19,6 +19,11 @@
 # ===================================================================
 # == Options
 # ===================================================================
+set show_hidden true
+set draw_borders both
+set hostname_in_titlebar false
+set tilde_in_titlebar true
+set show_selection_in_titlebar false
 
 # Which viewmode should be used?  Possible values are:
 #     miller: Use miller columns which show multiple levels of the hierarchy
@@ -34,7 +39,7 @@ set column_ratios 1,3,4
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
 
 # Show hidden files? You can toggle this by typing 'zh'
-set show_hidden false
+# set show_hidden true
 
 # Ask for a confirmation when running the "delete" command?
 # Valid values are "always", "never", "multiple" (default)
@@ -122,7 +127,7 @@ set draw_progress_bar_in_status_bar true
 # Separators are vertical lines between columns.
 # Outline draws a box around all the columns.
 # Both combines the two.
-set draw_borders separators
+# set draw_borders both
 
 # Display the directory name in tabs?
 set dirname_in_tabs false
@@ -151,10 +156,10 @@ set update_tmux_title true
 set shorten_title 3
 
 # Show hostname in titlebar?
-set hostname_in_titlebar true
+# set hostname_in_titlebar false
 
 # Abbreviate $HOME with ~ in the titlebar (first line) of ranger?
-set tilde_in_titlebar false
+# set tilde_in_titlebar true
 
 # How many directory-changes or console-commands should be kept in history?
 set max_history_size 20
@@ -221,7 +226,7 @@ set preview_max_size 0
 set hint_collapse_threshold 10
 
 # Add the highlighted file to the path in the titlebar
-set show_selection_in_titlebar true
+# set show_selection_in_titlebar false
 
 # The delay that ranger idly waits for user input, in milliseconds, with a
 # resolution of 100ms.  Lower delay reduces lag between directory updates but
@@ -715,3 +720,5 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+
+# default_linemode devicons
