ranger: hide file size, move statusbar to top

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -19,11 +19,14 @@
 # ===================================================================
 # == Options
 # ===================================================================
+# Custom# Custom
 set show_hidden true
 set draw_borders both
 set hostname_in_titlebar false
 set tilde_in_titlebar true
 set show_selection_in_titlebar false
+set display_size_in_main_column false
+set status_bar_on_top true
 
 # Which viewmode should be used?  Possible values are:
 #     miller: Use miller columns which show multiple levels of the hierarchy
@@ -117,7 +120,7 @@ set wrap_plaintext_previews false
 set save_console_history true
 
 # Draw the status bar on top of the browser window (default: bottom)
-set status_bar_on_top false
+# set status_bar_on_top true
 
 # Draw a progress bar in the status bar which displays the average state of all
 # currently running tasks which support progress bars?
@@ -136,7 +139,7 @@ set dirname_in_tabs false
 set mouse_enabled true
 
 # Display the file size in the main column or status bar?
-set display_size_in_main_column true
+# set display_size_in_main_column false
 set display_size_in_status_bar true
 
 # Display the free disk space in the status bar?
@@ -369,7 +372,7 @@ map <F4> edit
 map <F5> copy
 map <F6> cut
 map <F7> console mkdir%space
-map <F8> console delete
+# map <F8> console delete
 #map <F8> console trash
 map <F10> exit
 
@@ -383,7 +386,7 @@ map <END>      move to=-1
 map <PAGEDOWN> move down=1   pages=True
 map <PAGEUP>   move up=1     pages=True
 map <CR>       move right=1
-#map <DELETE>   console delete
+map <DELETE>   console delete
 map <INSERT>   console touch%space
 
 # VIM-like
