show ignored git giles NvimTree

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,8 +5,8 @@ include current-theme.conf
 
 # x11_hide_window_decorations	true
 remember_window_size	false
-initial_window_width	1500
-initial_window_height	800
+initial_window_width	1600
+initial_window_height	900
 window_padding_width	1
 # active_border_color	#00ff00
 
@@ -26,7 +26,7 @@ tab_title_template	" {fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{titl
 # KITTY KEY MAPPINGS
 map alt+enter launch --type=window --cwd=current
 map alt+t new_tab_with_cwd
-map alt+f2 detach_window new-tab
-map alt+f3 detach_window
-map alt+f9 close_other_windows_in_tab
+map ctrl+f2 detach_window new-tab
+map ctrl+f3 detach_window
+map ctrl+f9 close_other_windows_in_tab
 map alt+f toggle_layout stack
