--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,7 +15,7 @@ bold_font	SauceCodePro Nerd Font Medium
 italic_font	SauceCodePro Nerd Font Italic
 bold_italic_font	SauceCodePro Nerd Font Medium Italic
 
-# background_opacity 0.9
+background_opacity 0.9
 tab_bar_min_tabs	2
 tab_bar_edge	bottom
 tab_bar_style	separator
