--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 # BEGIN_KITTY_THEME
 # Gruvbox Material Dark Hard
-include current-theme.conf
+include themes/tokyonight_night.conf
 # END_KITTY_THEME
 
-# x11_hide_window_decorations	true
+x11_hide_window_decorations	true
 remember_window_size	false
 initial_window_width	1600
 initial_window_height	900
@@ -28,5 +28,6 @@ map alt+enter launch --type=window --cwd=current
 map alt+t new_tab_with_cwd
 map ctrl+f2 detach_window new-tab
 map ctrl+f3 detach_window
+map ctrl+f5 load_config_file
 map ctrl+f9 close_other_windows_in_tab
 map alt+f toggle_layout stack
