--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -30,4 +30,4 @@ map ctrl+f2 detach_window new-tab
 map ctrl+f3 detach_window
 map ctrl+f5 load_config_file
 map ctrl+f9 close_other_windows_in_tab
-map alt+f toggle_layout stack
+map ctrl+` toggle_layout stack
