feat(alias): add new alias and update keymaps and themes

--- a/.config/kitty/themes/tokyonight_night.conf
+++ b/.config/kitty/themes/tokyonight_night.conf
@@ -46,6 +46,6 @@ color14 #7dcfff
 color15 #c0caf5
 
 # extended colors
-color16 #ff9e64
+#color16 #ff9e64 # This messes with the ngrok background
 color17 #db4b4b
 
