chore(zsh): use starship prompt, rm vcs_info
style(kitty): disable window decorations
feat(starship): add new starship.toml config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,7 +3,7 @@
 include themes/tokyonight_night.conf
 # END_KITTY_THEME
 
-x11_hide_window_decorations	true
+x11_hide_window_decorations	false
 remember_window_size	false
 initial_window_width	1600
 initial_window_height	900
