--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 # BEGIN_KITTY_THEME
 # Gruvbox Material Dark Hard
-include themes/tokyonight_night.conf
+include themes/everblush.conf
 # END_KITTY_THEME
 
-x11_hide_window_decorations	false
+x11_hide_window_decorations	true
 remember_window_size	false
 initial_window_width	1600
 initial_window_height	900
