style(kitty,nvim): update opacity and theme settings

--- a/.config/kitty/themes/everblush.conf
+++ b/.config/kitty/themes/everblush.conf
@@ -5,8 +5,10 @@ selection_foreground    #dadada
 selection_background    #2d3437
 
 # Cursor colors
-cursor                  #2d3437
-cursor_text_color       #dadada
+# cursor                  #2d3437
+# cursor_text_color       #dadada
+cursor                  #dadada
+cursor_text_color       #232a2d
 
 # Normal colors
 color0                  #232a2d
