style(config): comment out decoration line, add keymaps

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ bold_italic_font	SauceCodePro Nerd Font Medium Italic
 
 window_padding_width	5
 background_opacity 1
-x11_hide_window_decorations	true
+# x11_hide_window_decorations	true
 
 remember_window_size	false
 initial_window_width	1600
