--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,8 +7,8 @@ italic_font	SauceCodePro Nerd Font Italic
 bold_italic_font	SauceCodePro Nerd Font Medium Italic
 
 window_padding_width	5
-background_opacity 1
-# x11_hide_window_decorations	true
+background_opacity 0.8
+x11_hide_window_decorations	true
 
 remember_window_size	false
 initial_window_width	1600
