--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -17,7 +17,8 @@ monitor=eDP-1, 1920x1080@144,0x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
+# exec-once = waybar & hyprpaper 
+exec-once = waybar & hyprpaper & kitty & firefox
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -120,6 +121,7 @@ gestures {
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    disable_hyprland_logo = true
     force_default_wallpaper = -1 # Set to 0 to disable the anime mascot wallpapers
 }
 
