--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -167,7 +167,7 @@ threshold = 30
 style = "bold red"
 
 [character]
-success_symbol = "[󰊠](green)"
+success_symbol = "[󰊠](blue)"
 error_symbol = "[󰊠](red)"
 
 [git_branch]
