style(.config): update prompt symbols in starship config

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -167,8 +167,8 @@ threshold = 30
 style = "bold red"
 
 [character]
-success_symbol = "[󰊠  ~❯](bold blue)"
-error_symbol = "[󰊠  ~❯](bold red)"
+success_symbol = "[󰊠  ː](bold blue)"
+error_symbol = "[󰊠  ̻ː](bold red)"
 
 [git_branch]
 symbol = '🌱 '
