--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -172,8 +172,8 @@ error_symbol = "[󰊠  ̻ː](bold red)"
 
 [git_branch]
 symbol = '🌱 '
-truncation_length = 7
-truncation_symbol = ''
+truncation_length = 8
+truncation_symbol = '…'
 # ignore_branches = ['master', 'main']
 
 [package]
