chore: update aliases and wallpaper configuration

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = /home/rocktim/dot/walls/astrogruvbox.png
+preload = /home/rocktim/dot/walls/evening-lights.jpg
 
-wallpaper = eDP-1, /home/rocktim/dot/walls/astrogruvbox.png
+wallpaper = eDP-1, /home/rocktim/dot/walls/evening-lights.jpg
 
