--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,7 +18,8 @@ monitor=eDP-1, 1920x1080@144,0x0,1
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper
-exec-once = waybar & hyprpaper & kitty & firefox
+exec-once = waybar & kitty & firefox
+exec = hyprpaper
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
