--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,5 @@
-include themes/everblush.conf
+# include themes/everblush.conf
+include themes/gruvbox_material.conf
 
 # Font config
 font_family	SauceCodePro Nerd Font
