--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -58,44 +58,35 @@ input {
 }
 
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     gaps_in = 5
-    gaps_out = 20
-    border_size = 2
+    gaps_out = 10
+    border_size = 0
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
-
     layout = dwindle
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 }
 
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
-    rounding = 5
-
+    rounding = 2
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 2
+        passes = 2
+				new_optimizations = true
     }
-
     drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
+    shadow_range = 3
+    shadow_render_power = 10
     col.shadow = rgba(1a1a1aee)
+		dim_inactive = true
+		dim_strength = 0.3
 }
 
 animations {
+    # https://wiki.hyprland.org/Configuring/Animations
     enabled = yes
-
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
@@ -121,7 +112,6 @@ gestures {
 }
 
 misc {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
     disable_hyprland_logo = true
     force_default_wallpaper = -1 # Set to 0 to disable the anime mascot wallpapers
 }
@@ -151,11 +141,12 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+# bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, O, swapnext
 
 # Move focus with mainMod + hjkl
-bind = $mainMod, l, movefocus, l
-bind = $mainMod, h, movefocus, r
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, h, movefocus, l
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
