--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,9 +1,9 @@
 {
-    // "layer": "top", // Waybar at top layear
-    // "position": "bottom", // Waybar position (top|bottom|left|right)
-    "height": 30, // Waybar height (to be removed for auto height)
-    // "width": 1280, // Waybar width
-    "spacing": 4, // Gaps between modules (4px)
+    "layer": "top",
+    "position": "top",
+    "height": 30,
+    "spacing": 5,
+
     // Choose the order of the modules
     "modules-left": ["hyprland/workspaces", "custom/media"],
     "modules-center": ["hyprland/window"],
@@ -13,6 +13,7 @@
 			"format": "{title}",
 			"max-length": 30
 		},
+
     // Modules configuration
     "hyprland/workspaces": {
         "disable-scroll": true,
@@ -30,6 +31,7 @@
             "default": ""
         }
     },
+
     "keyboard-state": {
         "numlock": true,
         "capslock": true,
@@ -124,7 +126,7 @@
         "format-ethernet": "{ipaddr}/{cidr} ",
         "tooltip-format": "{ifname} via {gwaddr} ",
         "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠",
+        "format-disconnected": "Disconnected !",
         "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
     "pulseaudio": {
@@ -160,3 +162,4 @@
     }
 }
 
+# vim: ft=json
