chore(hyprland.conf): adjust dim strength and update audio controls

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -66,7 +66,7 @@ decoration {
     shadow_render_power = 10
     col.shadow = rgba(1a1a1aee)
 		dim_inactive = true
-		dim_strength = 0.3
+		dim_strength = 0.1
 }
 
 animations {
@@ -169,6 +169,7 @@ bindm = $mainMod, mouse:273, resizewindow
 # Custom binding for fullscreen mode
 bind=SUPER,F,fullscreen,1
 
-# Example volume button that allows press and hold, volume limited to 150%
+# Audio control bindings (PulseAudio | pactl)
 binde=, XF86AudioRaiseVolume, exec, pactl set-sink-volume $DEFAULT_AUDIO_SINK +5%
 binde=, XF86AudioLowerVolume, exec, pactl set-sink-volume $DEFAULT_AUDIO_SINK -5%
+binde=, XF86AudioMute, exec, pactl set-sink-mute $DEFAULT_AUDIO_SINK toggle
