--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -173,3 +173,7 @@ bind=SUPER,F,fullscreen,1
 binde=, XF86AudioRaiseVolume, exec, pactl set-sink-volume $DEFAULT_AUDIO_SINK +5%
 binde=, XF86AudioLowerVolume, exec, pactl set-sink-volume $DEFAULT_AUDIO_SINK -5%
 binde=, XF86AudioMute, exec, pactl set-sink-mute $DEFAULT_AUDIO_SINK toggle
+
+# Screen brightness control bindings
+bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
+bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
