--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,152 +1,170 @@
 {
-    "layer": "top",
-    "position": "top",
-    "height": 30,
-    "spacing": 0,
-
-    // Choose the order of the modules
-    "modules-left": ["hyprland/workspaces", "custom/media"],
-    "modules-center": ["hyprland/window"],
-    "modules-right": ["mpd", "pulseaudio", "network", "cpu", "memory", "temperature", "clock"],
-
-		"hyprland/window": {
-			"format": "{title}",
-			"max-length": 30
-		},
-
-    // Modules configuration
-    "hyprland/workspaces": {
-        "disable-scroll": true,
-        "all-outputs": true,
-        "warp-on-scroll": false,
-        "format": "{icon}",
-				"persistent-workspaces": {
-					"*": 5,
-				},
-        "format-icons": {
-						"active": "󰮯",
-						"default": ""
+    "layer":"top",
+    "position":"top",
+    "height":30,
+    "spacing":0,
+    "modules-left":[
+        "hyprland/workspaces",
+        "custom/media"
+    ],
+    "modules-center":[
+        "hyprland/window"
+    ],
+    "modules-right":[
+        "mpd",
+        "pulseaudio",
+        "network",
+        "cpu",
+        "memory",
+        "temperature",
+        "clock"
+    ],
+    "hyprland/window":{
+        "format":"{title}",
+        "max-length":30
+    },
+    "hyprland/workspaces":{
+        "disable-scroll":true,
+        "all-outputs":true,
+        "warp-on-scroll":false,
+        "format":"{icon}",
+        "persistent-workspaces":{
+            "*":5
+        },
+        "format-icons":{
+            "active":"󰮯",
+            "default":""
         }
     },
-
-    "keyboard-state": {
-        "numlock": true,
-        "capslock": true,
-        "format": "{name} {icon}",
-        "format-icons": {
-            "locked": "",
-            "unlocked": ""
+    "keyboard-state":{
+        "numlock":true,
+        "capslock":true,
+        "format":"{name} {icon}",
+        "format-icons":{
+            "locked":"",
+            "unlocked":""
         }
     },
-    "mpd": {
-        "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
-        "format-disconnected": "Disconnected ",
-        "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
-        "unknown-tag": "N/A",
-        "interval": 2,
-        "consume-icons": {
-            "on": " "
+    "mpd":{
+        "format":"{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
+        "format-disconnected":"Disconnected ",
+        "format-stopped":"{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
+        "unknown-tag":"N/A",
+        "interval":2,
+        "consume-icons":{
+            "on":" "
         },
-        "random-icons": {
-            "off": "<span color=\"#f53c3c\"></span> ",
-            "on": " "
+        "random-icons":{
+            "off":"<span color=\"#f53c3c\"></span> ",
+            "on":" "
         },
-        "repeat-icons": {
-            "on": " "
+        "repeat-icons":{
+            "on":" "
         },
-        "single-icons": {
-            "on": "1 "
+        "single-icons":{
+            "on":"1 "
         },
-        "state-icons": {
-            "paused": "",
-            "playing": ""
+        "state-icons":{
+            "paused":"",
+            "playing":""
         },
-        "tooltip-format": "MPD (connected)",
-        "tooltip-format-disconnected": "MPD (disconnected)"
+        "tooltip-format":"MPD (connected)",
+        "tooltip-format-disconnected":"MPD (disconnected)"
     },
-    "idle_inhibitor": {
-        "format": "{icon}",
-        "format-icons": {
-            "activated": "",
-            "deactivated": ""
+    "idle_inhibitor":{
+        "format":"{icon}",
+        "format-icons":{
+            "activated":"",
+            "deactivated":""
         }
     },
-    "tray": {
-        // "icon-size": 21,
-        "spacing": 10
+    "tray":{
+        "spacing":10
     },
-    "clock": {
-        // "timezone": "America/New_York",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%Y-%m-%d}"
+    "clock":{
+        "tooltip-format":"<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+        "format-alt":"{:%Y-%m-%d}"
     },
-    "cpu": {
-        "format": "{usage}% ",
-        "tooltip": false
+    "cpu":{
+        "format":"{usage}% ",
+        "tooltip":false
     },
-    "memory": {
-        "format": "{}% "
+    "memory":{
+        "format":"{}% "
     },
-    "temperature": {
-        // "thermal-zone": 2,
-        // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-        "critical-threshold": 80,
-        // "format-critical": "{temperatureC}°C {icon}",
-        "format": "{temperatureC}°C {icon}",
-        "format-icons": ["", "", ""]
+    "temperature":{
+        "critical-threshold":80,
+        "format":"{temperatureC}°C {icon}",
+        "format-icons":[
+            "",
+            "",
+            ""
+        ]
     },
-    "backlight": {
-        // "device": "acpi_video1",
-        "format": "{percent}% {icon}",
-        "format-icons": ["", "", "", "", "", "", "", "", ""]
+    "backlight":{
+        "format":"{percent}% {icon}",
+        "format-icons":[
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            ""
+        ]
     },
-    "battery": {
-        "states": {
-            // "good": 95,
-            "warning": 30,
-            "critical": 15
+    "battery":{
+        "states":{
+            "warning":30,
+            "critical":15
         },
-        "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
-        "format-alt": "{time} {icon}",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
-        "format-icons": ["", "", "", "", ""]
+        "format":"{capacity}% {icon}",
+        "format-charging":"{capacity}% ",
+        "format-plugged":"{capacity}% ",
+        "format-alt":"{time} {icon}",
+        "format-icons":[
+            "",
+            "",
+            "",
+            "",
+            ""
+        ]
     },
-    "battery#bat2": {
-        "bat": "BAT2"
+    "battery#bat2":{
+        "bat":"BAT2"
     },
-    "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
-        "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected !",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+    "network":{
+        "format-wifi":"{essid} ({signalStrength}%) ",
+        "format-ethernet":"{ipaddr}/{cidr} ",
+        "tooltip-format":"{ifname} via {gwaddr} ",
+        "format-linked":"{ifname} (No IP) ",
+        "format-disconnected":"Disconnected !",
+        "format-alt":"{ifname}: {ipaddr}/{cidr}"
     },
-    "pulseaudio": {
-        "format": "{volume}% {icon}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-muted": "{volume}% 🔇",
-        "format-icons": {
-            "headphone": "",
-            "default": ["", "", ""]
+    "pulseaudio":{
+        "format":"{volume}% {icon}",
+        "format-bluetooth":"{volume}% {icon} {format_source}",
+        "format-muted":"{volume}% 🔇",
+        "format-icons":{
+            "headphone":"",
+            "default":[
+                "",
+                "",
+                ""
+            ]
+        }
+    },
+    "custom/media":{
+        "format":"{icon} {}",
+        "return-type":"json",
+        "max-length":40,
+        "format-icons":{
+            "spotify":"",
+            "default":"🎜"
         },
-    },
-    "custom/media": {
-        "format": "{icon} {}",
-        "return-type": "json",
-        "max-length": 40,
-        "format-icons": {
-            "spotify": "",
-            "default": "🎜"
-        },
-        "escape": true,
-        "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
-        // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
+        "escape":true,
+        "exec":"$HOME/.config/waybar/mediaplayer.py 2> /dev/null"
     }
 }
-
-# vim: ft=json
