--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -104,12 +104,13 @@ misc {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
+device {
+		name = "epic-mouse-v1"
     sensitivity = -0.5
 }
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+windowrulev2 = float,class:(kitty),title:(kitty)
 
 
 $mainMod = SUPER
